Change Paths.get to Path.of as JavaDocs recommend.
Signed-off-by: Matthew Skinner <matt@pcmus.com>